<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/echantRelay"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.simutech.landry.stechmappingindoor.chantillonage">
    <TextView
        android:id="@+id/echantTime"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_above="@+id/dbmValue"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/echantSelect"
        android:layout_toEndOf="@+id/echantMesure"
        android:gravity="center"
        android:paddingTop="10dp"
        android:text="@string/temp"
        android:textColor="@color/colorPrimary"
        android:textSize="60sp" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/Lcontrol"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/echantBtnstart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@color/start"
            android:text="@string/start"
            />

        <Button
            android:id="@+id/echantBtnStop"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background = "@color/stop"
            android:text="@string/stop" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Lcontrol"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/editText"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/echantBtnpause"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@color/normal"
            android:text="@string/pause" />

        <Button
            android:id="@+id/echantBtnChange"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@color/normal"
            android:text="@string/settings" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dbmValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/echantGps"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/echantDbm1"
            android:layout_width="0dp"
            android:layout_height="95dp"
            android:layout_gravity="bottom"
            android:layout_weight="0.33"
            android:gravity="center"
            android:text="@string/statut_sims_1"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/echantDbm2"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_gravity="bottom"
            android:layout_weight="0.33"
            android:gravity="center"
            android:text="@string/statut_sim_2"
            android:textSize="20sp" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/echantRadio"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/echantRadio4G"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/_4g" />

                <RadioButton
                    android:id="@+id/echantRadio3G"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/_3g"
                    />

                <RadioButton
                    android:id="@+id/echantRadio2G"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/_2g" />
            </RadioGroup>
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout3"
        android:layout_alignEnd="@+id/Lcontrol"
        android:layout_alignParentStart="true"
        android:editable="false"
        android:inputType="none"
        android:text="@string/techno_text" />

    <Button
        android:id="@+id/echantGps"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignEnd="@+id/linearLayout2"
        android:layout_alignTop="@+id/echantMesure"
        android:layout_marginEnd="52dp"
        android:background="@drawable/custum_button"
        android:text="G" />

    <Button
        android:id="@+id/echantMesure"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignTop="@+id/echantAutre"
        android:layout_centerHorizontal="true"
        android:background="@drawable/custum_button"
        android:text="M" />

    <Button
        android:id="@+id/echantAutre"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_above="@+id/linearLayout2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="52dp"
        android:background="@drawable/custum_button"
        android:text="A" />

    <NumberPicker
        android:id="@+id/echantSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/dbmValue"
        android:layout_alignEnd="@+id/echantMesure"
        android:layout_alignStart="@+id/dbmValue"
        android:layout_toStartOf="@+id/echantTime" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/echantTime"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/echantSec"
            android:layout_width="67dp"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked2"
            android:text="sec" />

        <RadioButton
            android:id="@+id/echantMin"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked2"
            android:text="Min" />
    </RadioGroup>
</RelativeLayout>
